--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immutable-complex",
   "homepage": "http://github.com/graphicore/Complex",
-  "version": "3.0.22,
+  "version": "3.0.2",
   "description": "Do calculations with Complex numbers",
   "keywords": [
     "Complex Numbers",
